fixing layout shift

--- a/project/styles/main-large.css
+++ b/project/styles/main-large.css
@@ -5,7 +5,6 @@
   }
 
   main {
-    min-height: 40vh;
     padding: 2rem;
     display: flex;
     flex-direction: column;
