--- a/project/styles/main.css
+++ b/project/styles/main.css
@@ -121,6 +121,7 @@ nav a:hover {
 
 main {
     margin: 1rem auto;
+    width: 900px;
 }
 
 .main-boxes{
